# kaggle_yandex

scripts/: .linear_regression_and_hash_features.py.swp  Create_features_as_summ_urls.py  Get_features.py  Get_small_data.py  Learn1.py  Learn1Basic.py  Learn_convolutional_by_time.py  New_data_to_almost_new_and_other.py  W2V.py  aka_porno.py  algorithm_for_navigational.py  clastering_users.py  data_utils.py  fast_solution_v3.py  features.py  get_items.py  linear_regression_and_hash_features.py  my_algorithm_for_navigational.py  my_algorithm_for_query_similiarity.py  navigational_with_users.py  session.py  trainer.py  trainer_SVM.py  trainer_XGboost.py  urls_as_summ_urls.py  user_0  user_0_1  working with data.py
yandex_cpp/: CMakeLists.txt
yandex_cpp/sources/: CMakeLists.txt  main.cpp  tester.hpp  utils.cpp  utils.h
